--- a/views/auth/signup.hbs
+++ b/views/auth/signup.hbs
@@ -1,15 +1,16 @@
 <div class="container">
     <div class="row justify-content-center">
+
         <div class="col-md-6">
-            <h1>Registro</h1>
+            <h1>Sign Up</h1>
             <hr>
             <form action="/signup" method="POST" enctype="multipart/form-data">
                 <div class="mb-3">
-                    <label for="user" class="form-label">Nombre usuario</label>
+                    <label for="user" class="form-label"> Username </label>
                     <input type="text" class="form-control" id="user" name="username">
                 </div>
                 <div class="mb-3">
-                    <label for="email" class="form-label">Correo electrónico</label>
+                    <label for="email" class="form-label"> Email </label>
                     <input type="email" class="form-control" id="email" name="email">
                 </div>
                 <div class="mb-3">
@@ -17,7 +18,7 @@
                     <input type="password" class="form-control" id="password" name="plainPassword">
                 </div>
                 <div class="mb-3">
-                    <label for="image" class="form-label">Imagen de Perfil</label>
+                    <label for="image" class="form-label"> Image </label>
                     <input type="file" class="form-control" id="profileImg" name="profileImg">
                 </div>
 
@@ -31,5 +32,6 @@
                 </div>
             </form>
         </div>
+
     </div>
 </div>
