--- a/views/auth/login.hbs
+++ b/views/auth/login.hbs
@@ -4,22 +4,22 @@
 
         <div class="col-md-6">
 
-            <h1>Inicio de sesión</h1>
+            <h1>Login</h1>
             <hr>
 
             <form action="/login" method="POST">
                 <div class="mb-3">
-                    <label for="email" class="form-label">Dirección de email</label>
+                    <label for="email" class="form-label">Email</label>
                     <input type="email" class="form-control" id="email" name="email">
                 </div>
 
                 <div class="mb-3">
-                    <label for="password" class="form-label">Contraseña</label>
+                    <label for="password" class="form-label">Password</label>
                     <input type="password" class="form-control" id="password" name="password">
                 </div>
 
                 <div class="d-grid gap-2">
-                    <button type="submit" class="btn btn-dark block">Acceder</button>
+                    <button type="submit" class="btn btn-dark block">Login</button>
                 </div>
 
                 {{#if errMessage}}
@@ -29,7 +29,9 @@
                 {{/if}}
 
             </form>
+
         </div>
+
     </div>
 
 </div>
