--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,7 +24,10 @@
          <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/artists">Artists</a>
+                  <a class="nav-link active" aria-current="page" href="/artists">TOP 25 Artists</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/artists/search">Search Artists</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/events">Events</a>
@@ -49,8 +52,8 @@
       </div>
    </nav>
 
-   {{{body}}}
 
+   {{{body}}}
 
 
    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js"
