--- a/views/artists/artistSearch.hbs
+++ b/views/artists/artistSearch.hbs
@@ -4,7 +4,7 @@
 
     <hr>
 
-    <form method="GET" action="/artist-results">
+    <form method="GET" action="/artist/search">
 
         <input type="text" name="nameArtist">
         <input type="submit" value="Seach artist">
