--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -34,13 +34,24 @@
                   <a class="nav-link active" aria-current="page" href="/events">Events</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/events/create">New Event</a>
+                  <a class="nav-link active" aria-current="page" href="/events/create">Create Event</a>
                </li>
 
                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/">New Artist</a>
+                  <a class="nav-link active" aria-current="page" href="/signup">Signup</a>
                </li>
-               <li class="nav-item dropdown ">
+               <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/login">Login</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+               </li>
+
+
+               {{!-- <li class="nav-item dropdown ">
                   <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown"
                      aria-expanded="false">User</a>
                   <ul class="dropdown-menu">
@@ -48,7 +59,8 @@
                      <li><a class="dropdown-item" href="/login">Log In</a></li>
                      <li><a class="dropdown-item" href="/logout">Log Out</a></li>
                   </ul>
-               </li>
+               </li> --}}
+
             </ul>
          </div>
       </div>
