--- a/views/artists/artistSearch.hbs
+++ b/views/artists/artistSearch.hbs
@@ -1,14 +1,16 @@
-<div class="container">
+<div class="container mt-5">
 
     <h1> SEARCH ARTISTS </h1>
 
     <hr>
 
-    <form method="GET" action="/artist/search">
+    <div class="container">
+        <form method="GET" action="/artist/search">
 
-        <input type="text" name="nameArtist">
-        <input type="submit" value="Seach artist">
+            <input type="text" name="nameArtist">
+            <input type="submit" value="Seach artist">
 
-    </form>
+        </form>
+    </div>
 
 </div>
