--- a/views/events/eventEdit.hbs
+++ b/views/events/eventEdit.hbs
@@ -3,7 +3,7 @@
     <div class="row justify-content-center">
         <div class="col-md-8">
 
-            <h1> Create event </h1>
+            <h1> Edit event </h1>
 
             <hr>
 
