--- a/views/error.hbs
+++ b/views/error.hbs
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container mt-5">
     <h1>Error!</h1>
     <h2>There was an error on the server! Check the console!</h2>
 </div>
