--- a/views/events/eventDetails.hbs
+++ b/views/events/eventDetails.hbs
@@ -24,6 +24,13 @@
             </div> --}}
         </div>
 
+        <div class="col">
+            <p><strong> ASSISTANTS LIST: </strong></p>
+            {{#each assistants}}
+            <p> {{username}} </p>
+            {{/each}}
+        </div>
+
     </div>
 
     <div class="container mt-5">
