--- a/views/events/eventCreate.hbs
+++ b/views/events/eventCreate.hbs
@@ -23,14 +23,20 @@
                     <input type="file" class="form-control" id="profileImg" name="eventImg">
                 </div>
 
-                <div class="mb-3 ">
+                <div class="mb-3">
                     <label for="" class="form-label">Start Date</label>
                     <input type="date" class="form-control" id="" name="startDate">
                 </div>
 
-                <div class="mb-3 ">
+                <div class="mb-3">
                     <label for="" class="form-label">End Date</label>
                     <input type="date" class="form-control" id="" name="endDate">
+                </div>
+
+                <div class="mb-3">
+                    <label for="artist1" class="form-label">Artista #1</label>
+                    <input type="text" class="form-control" id="artist1" name="artist1">
+                    <ul id="artist1results"></ul>
                 </div>
 
                 <button type="submit" class="btn btn-dark">Create Event</button>
@@ -41,3 +47,20 @@
     </div>
 
 </div>
+
+<script>
+
+    // const spotifyApi = require('./../services/spotify-service')
+
+
+    document.querySelector('#artist1').onkeyup = event => {
+
+        const { value } = event.target
+
+        // 1 - enviamo sa la api
+        console.log('VAMOS A MANDAR A LA API EL TITULO', value, 'Y A RENDERIZAR LOS POSIBLES ARTISTAS EN LA UL')
+
+        // 2 - renderizamos sugerencias en la ul:
+        document.querySelector('#artist1results').innerHTML += `<li>NOMBRE 1 DEL ARTISTA</li> <li>NOMBRE 2 DEL ARTISTA</li>`
+    }
+</script>
