select artist in event create

--- a/views/events/eventCreate.hbs
+++ b/views/events/eventCreate.hbs
@@ -48,19 +48,6 @@
 
 </div>
 
-<script>
-
-    // const spotifyApi = require('./../services/spotify-service')
 
 
-    document.querySelector('#artist1').onkeyup = event => {
-
-        const { value } = event.target
-
-        // 1 - enviamo sa la api
-        console.log('VAMOS A MANDAR A LA API EL TITULO', value, 'Y A RENDERIZAR LOS POSIBLES ARTISTAS EN LA UL')
-
-        // 2 - renderizamos sugerencias en la ul:
-        document.querySelector('#artist1results').innerHTML += `<li>NOMBRE 1 DEL ARTISTA</li> <li>NOMBRE 2 DEL ARTISTA</li>`
-    }
-</script>
+<script src="/js/select-artists.js"></script>
