--- a/views/events/eventCreate.hbs
+++ b/views/events/eventCreate.hbs
@@ -39,6 +39,14 @@
                     <ul id="artist1results"></ul>
                 </div>
 
+                {{!-- <div class="mb-3">
+                    <label for="artist1" class="form-label">Artista #1</label>
+                    <select name="artist1" id="artist1results">
+                        <option value=""></option>
+
+                    </select>
+                </div> --}}
+
                 <button type="submit" class="btn btn-dark">Create Event</button>
             </form>
 
