--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -16,11 +16,14 @@
 
    <nav class="navbar navbar-expand-lg bg-color">
       <div class="container-fluid">
+
          <a class="navbar-brand" href="/">Home</a>
+
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
          </button>
+
          <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav">
                <li class="nav-item">
@@ -44,25 +47,14 @@
                   <a class="nav-link active" aria-current="page" href="/login">Login</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/profile">Profile</a>
+                  <a class="nav-link active" aria-current="page" href="/profile">Profile: {{currentUser.username}}</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
                </li>
-
-
-               {{!-- <li class="nav-item dropdown ">
-                  <a class="nav-link dropdown-toggle " href="#" role="button" data-bs-toggle="dropdown"
-                     aria-expanded="false">User</a>
-                  <ul class="dropdown-menu">
-                     <li><a class="dropdown-item" href="/signup">Sign Up</a></li>
-                     <li><a class="dropdown-item" href="/login">Log In</a></li>
-                     <li><a class="dropdown-item" href="/logout">Log Out</a></li>
-                  </ul>
-               </li> --}}
-
             </ul>
          </div>
+
       </div>
    </nav>
 
