--- a/views/events/eventDetails.hbs
+++ b/views/events/eventDetails.hbs
@@ -30,6 +30,12 @@
             <p> {{username}} </p>
             {{/each}}
         </div>
+        <div class="col">
+            <p><strong> ARTIST LIST: </strong></p>
+            {{#each artists}}
+            <p> {{this}} </p>
+            {{/each}}
+        </div>
 
     </div>
 
