--- a/views/events/eventCreate.hbs
+++ b/views/events/eventCreate.hbs
@@ -33,21 +33,38 @@
                     <input type="date" class="form-control" id="" name="endDate">
                 </div>
 
-                <div class="mb-3">
-                    <label for="artist1" class="form-label">Artista #1</label>
-                    <input type="text" class="form-control" id="artist1" name="artist1">
-                    <ul id="artist1results"></ul>
-                </div>
 
+                {{!-- GERMAN --}}
                 {{!-- <div class="mb-3">
                     <label for="artist1" class="form-label">Artista #1</label>
-                    <select name="artist1" id="artist1results">
-                        <option value=""></option>
+                    <input type="text" class="form-control" id="artist1" name="artist1">
+                    <ul id="artist1results">
 
-                    </select>
+                    </ul>
                 </div> --}}
 
-                <button type="submit" class="btn btn-dark">Create Event</button>
+                {{!-- NUEVO INTENTO --}}
+                <div class="container">
+                    <label for="artist1">Artista #1</label>
+                    <input list="artist1results" id="artist1" name="artist1">
+                    <datalist id="artist1results">
+
+                    </datalist>
+                </div>
+
+                <div class="container">
+                    <label for="artist2">Artista #2</label>
+                    <input list="artist2results" id="artist2" name="artist2">
+                    <datalist id="artist2results">
+
+                    </datalist>
+                </div>
+
+
+                <div class="container mt-5">
+                    <button type="submit" class="btn btn-dark">Create Event</button>
+                </div>
+
             </form>
 
         </div>
