--- a/views/events/eventList.hbs
+++ b/views/events/eventList.hbs
@@ -12,7 +12,7 @@
             <div class="col-md-4 p-4 mb-2">
 
                 <article class="card p-3 mb-3">
-                    <img class="artist-img" src="{{images.[0].url}}" alt="{{name}}">
+                    <img class="artist-img" src="{{eventImg}}" alt="{{name}}">
                     <p><strong>Name:</strong> {{name}}</p>
                     <a href="/events/{{id}}"> View Details </a>
                     {{!-- <p><strong>Description:</strong> {{description}}</p> --}}
