solving image problems

--- a/views/artists/artistList.hbs
+++ b/views/artists/artistList.hbs
@@ -1,7 +1,7 @@
 <div class="container mt-5">
 
     <div>
-        <h1> TOP 20 ARTISTS IN SPAIN:</h1>
+        <h1> ARTISTS:</h1>
     </div>
 
     <hr>
