--- a/views/events/eventCreate.hbs
+++ b/views/events/eventCreate.hbs
@@ -44,7 +44,7 @@
                 </div> --}}
 
                 {{!-- NUEVO INTENTO --}}
-                <div class="container">
+                <div class="container mb-3">
                     <label for="artist1">Artista #1</label>
                     <input list="artist1results" id="artist1" name="artist1">
                     <datalist id="artist1results">
@@ -52,7 +52,7 @@
                     </datalist>
                 </div>
 
-                <div class="container">
+                <div class="container mb-3">
                     <label for="artist2">Artista #2</label>
                     <input list="artist2results" id="artist2" name="artist2">
                     <datalist id="artist2results">
