--- a/views/events/eventDetails.hbs
+++ b/views/events/eventDetails.hbs
@@ -9,10 +9,10 @@
     <div class="row container">
 
         <div class="col-md-3 col-gd-3">
-            <img src="{{imagesUrl}}" alt="{{name}}">
+            <img src="{{eventImg}}" alt="{{name}}">
         </div>
 
-        <div class="col-md-6 col-gd-6">
+        <div class="col-md-3 col-gd-6">
             <p><strong>DESCRIPTION: </strong> {{description}} </p>
             <p><strong>ASSISTANTS NUMBER: </strong> {{assistants.length}} </p>
 
