--- a/views/users/profile.hbs
+++ b/views/users/profile.hbs
@@ -27,5 +27,8 @@
         </div>
     </div>
 
+    <div class="container mt-5">
+        <a href="/profile/edit" class="btn btn-dark btn-sm">Edit Profile</a>
+    </div>
 
 </div>
