--- a/views/events/eventCreate.hbs
+++ b/views/events/eventCreate.hbs
@@ -14,7 +14,7 @@
                 </div>
 
                 <div class="mb-3">
-                    <label for="" class="form-label">Descripction</label>
+                    <label for="" class="form-label">Description</label>
                     <input type="text" class="form-control" id="" name="description">
                 </div>
 
