--- a/views/artists/artistList.hbs
+++ b/views/artists/artistList.hbs
@@ -6,7 +6,7 @@
 
     <hr>
 
-    <div class="container">
+    <div class="container mb-5">
 
         <div class="row d-flex justify-content-around">
 
