--- a/views/artists/artistSearch.hbs
+++ b/views/artists/artistSearch.hbs
@@ -4,7 +4,7 @@
 
     <hr>
 
-    <div class="container">
+    <div class="container mt-5">
         <form method="GET" action="/artist/search">
 
             <input type="text" name="nameArtist">
