--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -37,21 +37,28 @@
                   <a class="nav-link active" aria-current="page" href="/events">Events</a>
                </li>
                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/events/create">Create Event</a>
+                  <a class="nav-link active" aria-current="page" href="/events/create">Create Event (solo planner)</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/users">Users (solo admin)</a>
                </li>
 
+               {{#if currentUser}}
+               <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/profile">{{currentUser.username}}</a>
+               </li>
+               <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+               </li>
+               {{else}}
                <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/signup">Signup</a>
                </li>
                <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/login">Login</a>
                </li>
-               <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/profile">Profile: {{currentUser.username}}</a>
-               </li>
-               <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
-               </li>
+
+               {{/if}}
             </ul>
          </div>
 
