--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,12 +1,12 @@
 body {
   font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   background-image: url(./../images/16.gif);
   color: white
 }
 
 nav {
   background-color: #e3f2fd;
-  color: white
 }
 
 a {
@@ -32,7 +32,8 @@ h1 {
 }
 
 #errorMessage {
-  background-color: rgb(255, 202, 202);
+  background-color: rgb(245, 226, 226);
+  color: red;
   width: 400px;
   position: fixed;
   right: 10px;
