--- a/views/events/eventCreate.hbs
+++ b/views/events/eventCreate.hbs
@@ -28,7 +28,7 @@
                     <input type="date" class="form-control" id="" name="startDate">
                 </div>
 
-                <div class="mb-3">
+                <div class="mb-4">
                     <label for="" class="form-label">End Date</label>
                     <input type="date" class="form-control" id="" name="endDate">
                 </div>
@@ -44,24 +44,51 @@
                 </div> --}}
 
                 {{!-- NUEVO INTENTO --}}
-                <div class="container mb-3">
-                    <label for="artist1">Artista #1</label>
-                    <input list="artist1results" id="artist1" name="artist1">
-                    <datalist id="artist1results">
+                <div class="container">
 
-                    </datalist>
+                    <div class="container mb-3">
+                        <label for="artist1">Artista #1</label>
+                        <input list="artist1results" id="artist1" name="artist1">
+                        <datalist id="artist1results">
+
+                        </datalist>
+                    </div>
+
+                    <div class="container mb-3">
+                        <label for="artist2">Artista #2</label>
+                        <input list="artist2results" id="artist2" name="artist2">
+                        <datalist id="artist2results">
+
+                        </datalist>
+                    </div>
+
+                    <div class="container mb-3">
+                        <label for="artist3">Artista #3</label>
+                        <input list="artist3results" id="artist3" name="artist3">
+                        <datalist id="artist3results">
+
+                        </datalist>
+                    </div>
+
+                    <div class="container mb-3">
+                        <label for="artist4">Artista #4</label>
+                        <input list="artist4results" id="artist4" name="artist4">
+                        <datalist id="artist4results">
+
+                        </datalist>
+                    </div>
+
+                    <div class="container mb-3">
+                        <label for="artist5">Artista #5</label>
+                        <input list="artist5results" id="artist5" name="artist5">
+                        <datalist id="artist5results">
+
+                        </datalist>
+                    </div>
                 </div>
 
-                <div class="container mb-3">
-                    <label for="artist2">Artista #2</label>
-                    <input list="artist2results" id="artist2" name="artist2">
-                    <datalist id="artist2results">
 
-                    </datalist>
-                </div>
-
-
-                <div class="container mt-5">
+                <div class="container mt-5 mb-5">
                     <button type="submit" class="btn btn-dark">Create Event</button>
                 </div>
 
