--- a/views/users/editProfile.hbs
+++ b/views/users/editProfile.hbs
@@ -2,34 +2,34 @@
     <div class="row justify-content-center">
 
         <div class="col-md-6">
-            <h1>Sign Up</h1>
+            <h1> EDIT PROFILE </h1>
             <hr>
-            <form action="/signup" method="POST" enctype="multipart/form-data">
+            <form action="/users/{{id}}/edit" method="POST" enctype="multipart/form-data">
+
                 <div class="mb-3">
                     <label for="user" class="form-label"> Username </label>
-                    <input type="text" class="form-control" id="user" name="username">
+                    <input type="text" class="form-control" id="user" name="username" value="{{username}}">
                 </div>
+
                 <div class="mb-3">
                     <label for="email" class="form-label"> Email </label>
-                    <input type="email" class="form-control" id="email" name="email">
+                    <input type="email" class="form-control" id="email" name="email" value="{{email}}">
                 </div>
-                <div class="mb-3">
-                    <label for="password" class="form-label">Password</label>
-                    <input type="password" class="form-control" id="password" name="plainPassword">
-                </div>
+
                 <div class="mb-3">
                     <label for="image" class="form-label"> Image </label>
                     <input type="file" class="form-control" id="profileImg" name="profileImg">
                 </div>
 
                 {{#if errMessage}}
-                <div id="error">{{errMessage}}</div>
+                <div id=" error">{{errMessage}}
+                </div>
                 {{/if}}
 
-
-                <div class="d-grid">
-                    <button type="submit" class="btn btn-dark">Sign-up</button>
+                <div class="d-grid mt-5">
+                    <button type="submit" class="btn btn-dark"> UPDATE PROFILE </button>
                 </div>
+
             </form>
         </div>
 
