--- a/views/events/eventDetails.hbs
+++ b/views/events/eventDetails.hbs
@@ -14,7 +14,10 @@
 
         <div class="col-md-3">
             <p><strong>DESCRIPTION: </strong> {{description}} </p>
+            <p><strong>START DATE: </strong> {{date.start}} </p>
+            <p><strong>END DATE: </strong> {{date.end}} </p>
         </div>
+
 
         <div class="col-md-3 col-gd-6">
             <p><strong> ARTIST LIST: </strong></p>
