--- a/views/index.hbs
+++ b/views/index.hbs
@@ -3,7 +3,7 @@
     <p>Welcome Ironhacker!</p>
 
     <div class="d-grid gap-2 col-3 mx-auto">
-        <img src="/images/logo_Spotify.png" alt="Spotify_logo">
+        <img src="/public/images/logo_Spotify.png" alt="Spotify_logo">
         <a href="/artists" class="btn btn-light">TOP 20 Artists</a>
         <a href="/events" class="btn btn-light">Events</a>
     </div>
