--- a/views/artists/artistDetail.hbs
+++ b/views/artists/artistDetail.hbs
@@ -19,9 +19,9 @@
             <div class="container mt-5">
                 <p><strong>Followers:</strong> {{followers.total}}</p>
             </div>
-            <div class="d-grid gap-2 col-3 mx-auto mt-5">
+            {{!-- <div class="d-grid gap-2 col-3 mx-auto mt-5">
                 <a href="/artists" class="btn btn-dark btn-sm">Return ArtistsList</a>
-            </div>
+            </div> --}}
         </div>
     </div>
 
