--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -36,12 +36,24 @@
                <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/events">Events</a>
                </li>
+
+               {{#if currentUser}}
+               {{#if isPlanner}}
                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/events/create">Create Event (solo planner)</a>
+                  <a class="nav-link active" aria-current="page" href="/events/create">Create Event (PLANNER)</a>
                </li>
+               {{/if}}
+               {{/if}}
+
+               {{#if currentUser}}
+               {{#if isAdmin}}
                <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/users">Users (solo admin)</a>
+                  <a class="nav-link active" aria-current="page" href="/users">Users (ADMIN)</a>
                </li>
+               {{/if}}
+               {{/if}}
+
+
 
                {{#if currentUser}}
                <li class="nav-item">
@@ -57,8 +69,8 @@
                <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/login">Login</a>
                </li>
-
                {{/if}}
+
             </ul>
          </div>
 
