--- a/views/users/editProfile.hbs
+++ b/views/users/editProfile.hbs
@@ -4,7 +4,7 @@
         <div class="col-md-6">
             <h1> EDIT PROFILE </h1>
             <hr>
-            <form action="/users/{{id}}/edit" method="POST" enctype="multipart/form-data">
+            <form action="/profile/edit" method="POST" enctype="multipart/form-data">
 
                 <div class="mb-3">
                     <label for="user" class="form-label"> Username </label>
