--- a/views/events/eventEdit.hbs
+++ b/views/events/eventEdit.hbs
@@ -7,15 +7,15 @@
 
             <hr>
 
-            <form action="/events/create" method="POST" enctype="multipart/form-data">
+            <form action="/events/{{id}}/edit" method="POST" enctype="multipart/form-data">
                 <div class="mb-3 mt-5">
                     <label for="" class="form-label">Name</label>
-                    <input type="text" class="form-control" id="" name="name">
+                    <input type="text" class="form-control" id="" name="name" value="{{name}}">
                 </div>
 
                 <div class="mb-3">
                     <label for="" class="form-label">Descripction</label>
-                    <input type="text" class="form-control" id="" name="description">
+                    <input type="text" class="form-control" id="" name="description" value="{{description}}">
                 </div>
 
                 <div class="mb-3">
@@ -25,15 +25,15 @@
 
                 <div class="mb-3 ">
                     <label for="" class="form-label">Start Date</label>
-                    <input type="date" class="form-control" id="" name="startDate">
+                    <input type="date" class="form-control" id="" name="startDate" value="{{date.start}}">
                 </div>
 
                 <div class="mb-3 ">
                     <label for="" class="form-label">End Date</label>
-                    <input type="date" class="form-control" id="" name="endDate">
+                    <input type="date" class="form-control" id="" name="endDate" value="{{date.end}}">
                 </div>
 
-                <button type="submit" class="btn btn-dark">Create Event</button>
+                <button type="submit" class="btn btn-dark">Update Event</button>
             </form>
 
         </div>
