assist - not assist button

--- a/views/artists/artistSearch.hbs
+++ b/views/artists/artistSearch.hbs
@@ -5,7 +5,7 @@
     <hr>
 
     <div class="container mt-5">
-        <form method="GET" action="/artist/search">
+        <form method="GET" action="/artists/search-results">
 
             <input type="text" name="nameArtist">
             <input type="submit" value="Seach artist">
