--- a/views/events/eventDetails.hbs
+++ b/views/events/eventDetails.hbs
@@ -12,13 +12,13 @@
             <img src="{{event.eventImg}}" alt="{{event.name}}">
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-4">
             <div class="mb-5">
                 <p><strong>DESCRIPTION: </strong></p>
                 <p> {{event.description}} </p>
             </div>
-            <p><strong>START DATE: </strong> {{event.date.start}} </p>
-            <p><strong>END DATE: </strong> {{event.date.end}} </p>
+            <p><strong>START DATE: </strong> {{startDateFormatted}} </p>
+            <p><strong>END DATE: </strong> {{endDateFormatted}} </p>
         </div>
 
         <div class="col-md-2 col-gd-6">
@@ -28,7 +28,7 @@
             {{/each}}
         </div>
 
-        <div class="col-md-3">
+        <div class="col-md-2">
             <p><strong> ASSISTANTS LIST ({{event.assistants.length}}): </strong></p>
             {{#each event.assistants}}
             <a href="/users/{{id}}" class="d-block mb-2"> {{username}} </a>
@@ -41,9 +41,17 @@
 
     {{#if currentUser}}
     <div class="container mt-5">
-        <form action="/events/{{event.id}}/assist" method="POST">
-            <button class="btn btn-danger"> Assist </button>
+
+        {{#if assist}}
+        <form action="/events/{{event.id}}/notassist" method="POST">
+            <button class="btn btn-danger"> Not Assist </button>
         </form>
+        {{else}}
+        <form action="/events/{{event.id}}/assist" method="POST">
+            <button class="btn btn-danger mb-3"> Assist </button>
+        </form>
+        {{/if}}
+
     </div>
     {{/if}}
 
@@ -51,7 +59,7 @@
     <div class="container mt-5">
         <a href="/events/{{event.id}}/edit" class="btn btn-dark btn-sm">Edit Event</a>
     </div>
-    <div class="container mt-5">
+    <div class="container mt-5 mb-5">
         <form action="/events/{{event.id}}/delete" method="POST">
             <button class="btn btn-danger"> Delete event </button>
         </form>
@@ -62,28 +70,11 @@
     <div class="container mt-5">
         <a href="/events/{{event.id}}/edit" class="btn btn-dark btn-sm">Edit Event</a>
     </div>
-    <div class="container mt-5">
+    <div class="container mt-5 mb-5">
         <form action="/events/{{event.id}}/delete" method="POST">
             <button class="btn btn-danger"> Delete event </button>
         </form>
     </div>
     {{/if}}
-
-
-    {{!-- <div class="container mt-5">
-        <a href="/events/{{id}}/edit" class="btn btn-dark btn-sm">Edit Event</a>
-    </div>
-    <div class="container mt-5">
-        <form action="/events/{{id}}/delete" method="POST">
-            <button class="btn btn-danger"> Delete event </button>
-        </form>
-    </div>
-
-    <div class="container mt-5">
-        <form action="/events/{{id}}/assist" method="POST">
-            <button class="btn btn-danger"> Assist </button>
-        </form>
-    </div> --}}
-
 
 </div>
