adding google maps api

--- a/views/events/eventCreate.hbs
+++ b/views/events/eventCreate.hbs
@@ -33,6 +33,16 @@
                     <input type="date" class="form-control" id="" name="endDate">
                 </div>
 
+                <div class="container mb-3">
+                    <label for=""> LATITUD </label>
+                    <input type="text" name="lat">
+                </div>
+
+                <div class="container mb-3">
+                    <label for=""> LONGITUD </label>
+                    <input type="text" name="lon">
+                </div>
+
 
                 {{!-- GERMAN --}}
                 {{!-- <div class="mb-3">
