--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -31,6 +31,11 @@ h1 {
   color: 15px;
 }
 
+#map {
+  height: 600px;
+  background-color: red;
+}
+
 #errorMessage {
   background-color: rgb(245, 226, 226);
   color: red;
