--- a/views/artists/artistList.hbs
+++ b/views/artists/artistList.hbs
@@ -14,7 +14,7 @@
             <div class="col-md-3 p-4 mb-2">
 
                 <article class="card p-3 mb-3">
-                    <div class="div-card-img">
+                    <div class="div-card-img mb-4">
                         <img class="img-card-img" src="{{images.[0].url}}" alt="{{name}}">
                     </div>
                     <div class="container">
