--- a/views/artists/artistSearch.hbs
+++ b/views/artists/artistSearch.hbs
@@ -8,7 +8,7 @@
         <form method="GET" action="/artists/search-results">
 
             <input type="text" name="nameArtist">
-            <input type="submit" value="Seach artist">
+            <input type="submit" value="Seach artist" class="btn btn-light">
 
         </form>
     </div>
