--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -24,7 +24,8 @@
             <span class="navbar-toggler-icon"></span>
          </button>
 
-         <div class="collapse navbar-collapse" id="navbarNavDropdown">
+         <div class="collapse navbar-collapse justify-content-between" id="navbarNavDropdown">
+
             <ul class="navbar-nav">
                <li class="nav-item">
                   <a class="nav-link active" aria-current="page" href="/artists">TOP 20 Artists</a>
@@ -52,21 +53,26 @@
                </li>
                {{/if}}
                {{/if}}
+            </ul>
 
-
-
+            <ul class="navbar-nav d-flex flex-sm-column flex-md-row ">
                {{#if currentUser}}
-               <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/profile">{{currentUser.username}}</a>
+               <li class="nav-item ">
+                  <a class="nav-link active d-flex flex-row align-items-center" aria-current="page" href="/profile">
+                     <div class="user-img">
+                        <img src="{{currentUser.profileImg}}" alt="">
+                     </div>
+                     <p> {{currentUser.username}} </p>
+                  </a>
                </li>
-               <li class="nav-item">
-                  <a class="nav-link active" aria-current="page" href="/logout">Logout</a>
+               <li class="nav-item d-flex flex-row align-items-center">
+                  <a class="nav-link active " aria-current="page" href="/logout">Logout</a>
                </li>
                {{else}}
-               <li class="nav-item">
+               <li class="nav-item d-flex flex-row align-items-center">
                   <a class="nav-link active" aria-current="page" href="/signup">Signup</a>
                </li>
-               <li class="nav-item">
+               <li class="nav-item d-flex flex-row align-items-center">
                   <a class="nav-link active" aria-current="page" href="/login">Login</a>
                </li>
                {{/if}}
